--- a/Flagrum.Web/Layout/MainMenu.razor
+++ b/Flagrum.Web/Layout/MainMenu.razor
@@ -31,6 +31,16 @@
         <div class="h-full p-6 scrollbar-light" style="max-height: 100%; overflow-y: auto">
             <h3 class="text-grey-300 mb-6">Flagrum has been updated to @Version!</h3>
             <div class="bg-grey-900 rounded-md border border-grey-700 p-4">
+                <h4 class="text-grey-300 mb-4">Flagrum 1.1.6</h4>
+                <h5 class="text-grey-300 mb-4">Bug Fixes</h5>
+                <ul class="list-disc ml-6 mb-6">
+                    <li>Fixed a bug where &quot;Export with Dependencies&quot; was not working with environment models</li>
+                    <li>Fixed a bug where the default fallback MRS texture was writing in the wrong texture format</li>
+                    <li>Fixed a bug with tags on custom model replacement presets</li>
+                </ul>
+            </div>
+
+            <div class="bg-grey-900 rounded-md border border-grey-700 p-4 mt-6">
                 <h4 class="text-grey-300 mb-4">Flagrum 1.1.5</h4>
                 <h5 class="text-grey-300 mb-4">Asset Explorer Game View</h5>
                 <ul class="list-disc ml-6 mb-6">
