--- a/Flagrum.Web/Layout/MainMenu.razor
+++ b/Flagrum.Web/Layout/MainMenu.razor
@@ -31,6 +31,23 @@
         <div class="h-full p-6 scrollbar-light" style="max-height: 100%; overflow-y: auto">
             <h3 class="text-grey-300 mb-6">Flagrum has been updated to @Version!</h3>
             <div class="bg-grey-900 rounded-md border border-grey-700 p-4">
+                <h4 class="text-grey-300 mb-4">Flagrum 1.1.7</h4>
+                <h5 class="text-grey-300 mb-4">Model Replacements</h5>
+                <ul class="list-disc ml-6 mb-6">
+                    <li>Added UI for creating custom model replacement presets</li>
+                    <li>Added ability to clone existing presets for quick editing of default presets</li>
+                    <li>Added ability to favourite presets for ease-of-access</li>
+                    <li>Added ability to edit and delete custom presets</li>
+                </ul>
+                <h5 class="text-grey-300 mb-4">Bug Fixes</h5>
+                <ul class="list-disc ml-6 mb-6">
+                    <li>Fixed bug where exporting with dependencies would crash if model had no high res textures</li>
+                    <li>Fixed edge-case where bugged MO mods with no images would not load for editing</li>
+                    <li>Fixed edge-case where Flagrum's default window spilled off the monitor on certain resolutions</li>
+                </ul>
+            </div>
+            
+            <div class="bg-grey-900 rounded-md border border-grey-700 p-4 mt-6">
                 <h4 class="text-grey-300 mb-4">Flagrum 1.1.6</h4>
                 <h5 class="text-grey-300 mb-4">Bug Fixes</h5>
                 <ul class="list-disc ml-6 mb-6">
