Fixed bug where selecting a preset would cause crash

--- a/Flagrum.Web/Features/ModLibrary/Editor/ModelReplacementRow.razor
+++ b/Flagrum.Web/Features/ModLibrary/Editor/ModelReplacementRow.razor
@@ -77,9 +77,10 @@
 
     private void OnSelect()
     {
-        ParentParent.Mod.Target = Preset.Id + 100;
+        var id = Preset.IsDefault ? Preset.Id : Preset.Id + 100;
+        ParentParent.Mod.Target = id;
         ParentParent.ModelReplacementPresetName = Preset.Name;
-        ParentParent.ModTargetChanged(Preset.Id + 100);
+        ParentParent.ModTargetChanged(id);
     }
 
     private void OnFavourite()
