--- a/Flagrum.Web/Layout/MainMenu.razor
+++ b/Flagrum.Web/Layout/MainMenu.razor
@@ -31,6 +31,17 @@
         <div class="h-full p-6 scrollbar-light" style="max-height: 100%; overflow-y: auto">
             <h3 class="text-grey-300 mb-6">Flagrum has been updated to @Version!</h3>
             <div class="bg-grey-900 rounded-md border border-grey-700 p-4">
+                <h4 class="text-grey-300 mb-4">Flagrum 1.1.8</h4>
+                <h5 class="text-grey-300 mb-4">Bug Fixes</h5>
+                <ul class="list-disc ml-6 mb-6">
+                    <li>Fixed bug where Weapon Model Replacements were invisible in-game</li>
+                    <li>Fixed bug where editing Comrades mods after restarting Flagrum could break them</li>
+                    <li>Fixed bug where Comrades gear thumbnails were always invisible</li>
+                    <li>Fixed bug where Comrades Accessory mods were always invisible in-game</li>
+                </ul>
+            </div>
+            
+            <div class="bg-grey-900 rounded-md border border-grey-700 p-4 mt-6">
                 <h4 class="text-grey-300 mb-4">Flagrum 1.1.7</h4>
                 <h5 class="text-grey-300 mb-4">Model Replacements</h5>
                 <ul class="list-disc ml-6 mb-6">
