--- a/Flagrum.Web/Features/AssetExplorer/Previews/Preview.razor
+++ b/Flagrum.Web/Features/AssetExplorer/Previews/Preview.razor
@@ -7,6 +7,14 @@ else if (Item?.Type == ExplorerItemType.Material)
 {
     <MaterialPreview Item="Item"/>
 }
+else if (Item?.Type == ExplorerItemType.Xml)
+{
+    <XmlPreview Item="Item"/>
+}
+else if (Item?.Type == ExplorerItemType.Text)
+{
+    <TextPreview Item="Item"/>
+}
 @* else if (Item?.Type == ExplorerItemType.Model) *@
 @* { *@
 @*     <ModelPreview Item="Item"/> *@
@@ -16,7 +24,7 @@ else
     <div class="flex-grow flex flex-row items-center">
         <div class="mx-auto">
             <strong class="text-grey-500">
-                Preview currently supports Textures (.btex) and Materials (.gmtl.gfxbin)
+                No preview available
             </strong>
         </div>
     </div>
