--- a/Flagrum.Web/Features/AssetExplorer/Export/ExportContextMenu.razor
+++ b/Flagrum.Web/Features/AssetExplorer/Export/ExportContextMenu.razor
@@ -1,6 +1,10 @@
-﻿@using Index = Flagrum.Web.Features.AssetExplorer.Index
+﻿@using Flagrum.Web.Persistence.Entities
+@using Index = Flagrum.Web.Features.AssetExplorer.Index
 @using Flagrum.Web.Features.AssetExplorer.Data
 @using System.IO
+@using System.Text
+@using Flagrum.Core.Ebex.Xmb2
+@using Flagrum.Core.Ebex
 @inject IWpfService WpfService
 @inject FlagrumDbContext Context
 @inject SettingsService Settings
@@ -36,6 +40,23 @@
                 <div class="row">
                     <span class="material-icons mr-3" style="font-size: 0.9rem">share</span>
                     <span>Export With Dependencies</span>
+                </div>
+            </Item>
+        }
+        else if (Parent.ContextItem.Type == ExplorerItemType.Xml)
+        {
+            <Item OnClick="ExportXml"
+                  OverrideDefaultCssClass="text-grey-200 text-sm p-3 hover:bg-grey-600 cursor-pointer transition-colors">
+                <div class="row">
+                    <span class="material-icons mr-3" style="font-size: 0.9rem">code</span>
+                    <span>Export as XML</span>
+                </div>
+            </Item>
+            <Item OnClick="ExportEnvironment"
+                  OverrideDefaultCssClass="text-grey-200 text-sm p-3 hover:bg-grey-600 cursor-pointer transition-colors">
+                <div class="row">
+                    <span class="material-icons mr-3" style="font-size: 0.9rem">public</span>
+                    <span>Export as Environment</span>
                 </div>
             </Item>
         }
@@ -95,6 +116,45 @@
             }
 
             File.WriteAllBytes(path, data);
+        });
+    }
+
+    private async Task ExportXml()
+    {
+        var item = Parent.ContextItem;
+        var defaultName = item.Name[..item.Name.LastIndexOf('.')] + ".xml";
+        var filter = "XML File|*.xml";
+
+        await WpfService.OpenSaveFileDialogAsync(defaultName, filter, path =>
+        {
+            var xmb2 = item.Data();
+            var builder = new StringBuilder();
+            Xmb2Document.Dump(xmb2, builder);
+            File.WriteAllText(path, builder.ToString());
+        });
+    }
+
+    private async Task ExportEnvironment()
+    {
+        var item = Parent.ContextItem;
+        var filter = "Flagrum Environment Data|*.fed";
+
+        await WpfService.OpenSaveFileDialogAsync(item.Name[..item.Name.LastIndexOf('.')] + ".fed", filter, async path =>
+        {
+            await InvokeAsync(() => Parent.SetLoading(true, "Exporting"));
+
+            await Task.Run(() =>
+            {
+                var packer = new EnvironmentPacker(Logger, item.Uri, Settings.GameDataDirectory, Context.GetFileByUri, btex =>
+                {
+                    var converter = new TextureConverter();
+                    return converter.BtexToTga(btex);
+                }, Context.ArchiveExistsForUri);
+
+                packer.Pack(path);
+            });
+
+            await InvokeAsync(() => Parent.SetLoading(false));
         });
     }
 }
