--- a/Flagrum.Web/Features/AssetExplorer/Export/ExportFolderModal.razor
+++ b/Flagrum.Web/Features/AssetExplorer/Export/ExportFolderModal.razor
@@ -1,8 +1,7 @@
 ﻿@using Index = Flagrum.Web.Features.AssetExplorer.Index
-@using System.IO
 @using Flagrum.Core.Archive
 @using Flagrum.Web.Features.AssetExplorer.Data
-@using Flagrum.Web.Persistence.Entities
+@using System.IO
 @inject IWpfService WpfService
 @inject FlagrumDbContext Context
 @inject SettingsService Settings
@@ -78,7 +77,7 @@
                 }
                 else
                 {
-                    foreach (var node in Parent.ContextNode.Children)
+                    foreach (var node in Context.AssetExplorerNodes.Where(n => n.ParentId == Parent.ContextNode.Id))
                     {
                         if (!Context.AssetExplorerNodes.Any(n => n.ParentId == node.Id))
                         {
@@ -98,7 +97,7 @@
 
                 var baseUri = Parent.ContextNode.GetUri(Context);
                 var converter = new TextureConverter();
-                
+
                 foreach (var (archiveLocation, uris) in files)
                 {
                     using var unpacker = new Unpacker(archiveLocation);
@@ -113,13 +112,13 @@
                                 "TGA" => converter.BtexToTga(data),
                                 "DDS" => converter.BtexToDds(data),
                                 _ => data
-                            };
+                                };
                         }
 
                         var relativePath = Parent.ContextNode.Name + "\\" + uri
                             .Replace(baseUri, "")
                             .Replace('/', '\\');
-                        
+
                         var currentDirectory = folder;
                         var split = relativePath.Split('\\');
                         for (var index = 0; index < split.Length - 1; index++)
@@ -133,10 +132,11 @@
                         }
 
                         var absolutePath = currentDirectory + "\\" + split.Last();
+                        absolutePath = absolutePath[..absolutePath.LastIndexOf('.')] + "." + Extension.ToLower();
                         File.WriteAllBytes(absolutePath, data);
                     }
                 }
-                
+
                 Parent.SetLoading(false);
             });
         });
