--- a/Flagrum.Web/Features/AssetExplorer/Index.razor
+++ b/Flagrum.Web/Features/AssetExplorer/Index.razor
@@ -115,7 +115,7 @@
     private int View { get; set; } = 1;
     public ExplorerItemRow SelectedDirectory { get; set; }
     private ExplorerItemRow SelectedFile { get; set; }
-    private AssetExplorerItem SelectedItem { get; set; }
+    public AssetExplorerItem SelectedItem { get; set; }
 
     public bool IsLoading { get; set; }
     private string LoadingMessage { get; set; }
