--- a/Flagrum.Web/Features/AssetExplorer/Export/ExportWithDependenciesModal.razor
+++ b/Flagrum.Web/Features/AssetExplorer/Export/ExportWithDependenciesModal.razor
@@ -6,6 +6,7 @@
 @using BinaryReader = Flagrum.Core.Gfxbin.Serialization.BinaryReader
 @using Flagrum.Core.Archive
 @using System.Text
+@using Flagrum.Core.Gfxbin.Gmtl.Data
 @inject IWpfService WpfService
 @inject SettingsService Settings
 @inject FlagrumDbContext Context
@@ -74,7 +75,9 @@
             header.Read(reader);
 
             var materials = new Dictionary<string, byte[]>();
+            var highMaterials = new Dictionary<string, byte[]>();
             var textures = new Dictionary<string, byte[]>();
+            var highTextures = new Dictionary<string, byte[]>();
 
             var gpubinUri = header.Dependencies.FirstOrDefault(d => d.Path.EndsWith(".gpubin"))?.Path;
             var gpubin = Context.GetFileByUri(gpubinUri);
@@ -102,54 +105,20 @@
 
                 if (IncludeHighTextures && !string.IsNullOrWhiteSpace(material.HighTexturePackAsset))
                 {
+                    // Process high resolution textures
                     var highTexturePackUri = material.HighTexturePackAsset.Replace(".htpk", ".autoext");
-
-                    byte[] highTexturePack = null;
-                    if (Context.ArchiveExistsForUri(highTexturePackUri))
+                    var highMaterial = ProcessHighTextures(material, highTexturePackUri, textures);
+                    if (highMaterial.Length > 0)
                     {
-                        highTexturePack = Context.GetFileByUri(highTexturePackUri);
+                        highMaterials.Add(highTexturePackUri, highMaterial);
                     }
-                    else
+                    
+                    // Attempt to process 4K texture pack
+                    highTexturePackUri = highTexturePackUri.Insert(highTexturePackUri.LastIndexOf('.'), "2");
+                    highMaterial = ProcessHighTextures(material, highTexturePackUri, highTextures);
+                    if (highMaterial.Length > 0)
                     {
-                        var archiveRelativePath = material.HighTexturePackAsset
-                            .Replace("data://", "")
-                            .Replace(".htpk", ".earc")
-                            .Replace('/', '\\');
-
-                        var archivePath = $"{Settings.GameDataDirectory}\\{archiveRelativePath}";
-
-                        if (File.Exists(archivePath))
-                        {
-                            using var unpacker = new Unpacker(archivePath);
-                            var files = string.Join(' ', unpacker.Files.Select(f => f.Uri));
-                            highTexturePack = Encoding.UTF8.GetBytes(files);
-                        }
-                    }
-
-                    if (highTexturePack != null)
-                    {
-                        foreach (var highTexture in Encoding.UTF8.GetString(highTexturePack)
-                            .Split(' ')
-                            .Where(s => !string.IsNullOrWhiteSpace(s))
-                            .Select(s =>
-                            {
-                                var result = s.Trim();
-                                if (result.Last() == 0x00)
-                                {
-                                    result = result[..^1];
-                                }
-
-                                return result;
-                            }))
-                        {
-                            if (textures.ContainsKey(highTexture) || !CommonCheck(highTexture))
-                            {
-                                continue;
-                            }
-
-                            var textureData = Context.GetFileByUri(highTexture);
-                            textures.Add(highTexture, ConvertTexture(textureData));
-                        }
+                        highMaterials.Add(highTexturePackUri, highMaterial);
                     }
                 }
             }
@@ -158,7 +127,8 @@
             File.WriteAllBytes(path.Replace(".gmdl.gfxbin", ".gpubin"), gpubin);
             var root = Path.GetDirectoryName(path);
             var materialsDirectory = $"{root}\\materials";
-            var texturesDirectory = $"{root}\\textures";
+            var texturesDirectory = $"{root}\\sourceimages";
+            var highImagesDirectory = $"{root}\\highimages";
 
             if (!Directory.Exists(materialsDirectory))
             {
@@ -170,9 +140,20 @@
                 Directory.CreateDirectory(texturesDirectory);
             }
 
+            if (!Directory.Exists(highImagesDirectory))
+            {
+                Directory.CreateDirectory(highImagesDirectory);
+            }
+
             foreach (var (uri, data) in materials)
             {
                 var materialPath = $"{materialsDirectory}\\{uri.Split('/').Last()}.gfxbin";
+                File.WriteAllBytes(materialPath, data);
+            }
+            
+            foreach (var (uri, data) in highMaterials)
+            {
+                var materialPath = $"{materialsDirectory}\\{uri.Split('/').Last()}";
                 File.WriteAllBytes(materialPath, data);
             }
 
@@ -183,9 +164,72 @@
                 var texturePath = $"{texturesDirectory}\\{fileName}";
                 File.WriteAllBytes(texturePath, data);
             }
+            
+            foreach (var (uri, data) in highTextures)
+            {
+                var fileName = uri.Split('/').Last();
+                fileName = fileName[..fileName.LastIndexOf('.')] + "." + Extension.ToLower();
+                var texturePath = $"{highImagesDirectory}\\{fileName}";
+                File.WriteAllBytes(texturePath, data);
+            }
 
             InvokeAsync(() => Parent.SetLoading(false));
         });
+    }
+
+    private byte[] ProcessHighTextures(Material material, string highTexturePackUri, Dictionary<string, byte[]> textures)
+    {
+        byte[] highTexturePack = null;
+        if (Context.ArchiveExistsForUri(highTexturePackUri))
+        {
+            highTexturePack = Context.GetFileByUri(highTexturePackUri);
+        }
+        else
+        {
+            var archiveRelativePath = material.HighTexturePackAsset
+                .Replace("data://", "")
+                .Replace(".htpk", ".earc")
+                .Replace('/', '\\');
+
+            var archivePath = $"{Settings.GameDataDirectory}\\{archiveRelativePath}";
+
+            if (File.Exists(archivePath))
+            {
+                using var unpacker = new Unpacker(archivePath);
+                var files = string.Join(' ', unpacker.Files.Select(f => f.Uri));
+                highTexturePack = Encoding.UTF8.GetBytes(files);
+            }
+        }
+
+        if (highTexturePack != null)
+        {
+            foreach (var highTexture in Encoding.UTF8.GetString(highTexturePack)
+                .Split(' ')
+                .Where(s => !string.IsNullOrWhiteSpace(s))
+                .Select(s =>
+                {
+                    var result = s.Trim();
+                    if (result.Last() == 0x00)
+                    {
+                        result = result[..^1];
+                    }
+
+                    return result;
+                }))
+            {
+                if (textures.ContainsKey(highTexture) || !CommonCheck(highTexture))
+                {
+                    continue;
+                }
+
+                var textureData = Context.GetFileByUri(highTexture);
+                textures.Add(highTexture, ConvertTexture(textureData));
+            }
+
+            return highTexturePack;
+        }
+
+        return Array.Empty<byte>();
     }
 
     private bool CommonCheck(string uri)
