--- a/Flagrum.Web/Features/AssetExplorer/VirtualExplorerRow.razor
+++ b/Flagrum.Web/Features/AssetExplorer/VirtualExplorerRow.razor
@@ -3,7 +3,7 @@
 @inject FlagrumDbContext Context
 @inject SettingsService Settings
 
-<div class="row py-1 pr-2 pl-4 transition-colors hover:bg-grey-700 select-none cursor-pointer"
+<div class="row py-1 pr-2 pl-4 transition-colors @(Parent.SelectedItem?.Uri == Node.GetUri(Context) || Parent.ContextNode == Node ? "bg-grey-700" : "") hover:bg-grey-700 select-none cursor-pointer"
      @onclick="() => OnClick(Node)">
     <span class="material-icons text-sm">@AssetExplorerItem.GetIcon(Node.GetUri(Context))</span>
     <span class="pl-2 flex-grow text-sm" style="white-space: nowrap; overflow: hidden; text-overflow: ellipsis;">@AssetExplorerItem.GetDisplayName(Node.Name, AssetExplorerItem.GetType(Node.GetUri(Context)))</span>
@@ -26,6 +26,7 @@
         else
         {
             Parent.SetSelectedItem(AssetExplorerItem.FromNode(node, Context));
+            StateHasChanged();
         }
     }
 }
