--- a/Flagrum.Web/Layout/PatchNotes.razor
+++ b/Flagrum.Web/Layout/PatchNotes.razor
@@ -1,6 +1,18 @@
 ﻿<h3 class="text-grey-300 mb-6">Flagrum has been updated to @Version!</h3>
 
-<div class="bg-grey-900 rounded-md border border-grey-700 p-4">
+<div class="bg-grey-900 rounded-md border border-grey-700 p-4 mt-6">
+    <h4 class="text-grey-300 mb-4">Flagrum 1.1.10</h4>
+    <h5 class="text-grey-300 mb-4">Bug Fixes</h5>
+    <ul class="list-disc ml-6 mb-6">
+        <li>Fixed bug where Export with Dependencies was failing for some models with 4K textures</li>
+        <li>Fixed bug where Export Folder was failing on all folders</li>
+        <li>Fixed bug where Export Folder was exporting files with their virtual extensions</li>
+        <li>Fixed bug where exporting environments with model nodes without paths caused export to fail</li>
+        <li>Fixed bug where rarely exporting multiple environments in same session would crash Flagrum</li>
+    </ul>
+</div>
+
+<div class="bg-grey-900 rounded-md border border-grey-700 p-4 mt-6">
     <h4 class="text-grey-300 mb-6">Flagrum 1.1.9</h4>
     <h3 class="text-grey-300 mb-2">Introducing the Environment Exporter!</h3>
     <span class="block mb-6">
@@ -38,22 +50,22 @@
     </ul>
 </div>
 
-<div class="bg-grey-900 rounded-md border border-grey-700 p-4 mt-6">
-    <h4 class="text-grey-300 mb-4">Flagrum 1.1.7</h4>
-    <h5 class="text-grey-300 mb-4">Model Replacements</h5>
-    <ul class="list-disc ml-6 mb-6">
-        <li>Added UI for creating custom model replacement presets</li>
-        <li>Added ability to clone existing presets for quick editing of default presets</li>
-        <li>Added ability to favourite presets for ease-of-access</li>
-        <li>Added ability to edit and delete custom presets</li>
-    </ul>
-    <h5 class="text-grey-300 mb-4">Bug Fixes</h5>
-    <ul class="list-disc ml-6 mb-6">
-        <li>Fixed bug where exporting with dependencies would crash if model had no high res textures</li>
-        <li>Fixed edge-case where bugged MO mods with no images would not load for editing</li>
-        <li>Fixed edge-case where Flagrum's default window spilled off the monitor on certain resolutions</li>
-    </ul>
-</div>
+@* <div class="bg-grey-900 rounded-md border border-grey-700 p-4 mt-6"> *@
+@*     <h4 class="text-grey-300 mb-4">Flagrum 1.1.7</h4> *@
+@*     <h5 class="text-grey-300 mb-4">Model Replacements</h5> *@
+@*     <ul class="list-disc ml-6 mb-6"> *@
+@*         <li>Added UI for creating custom model replacement presets</li> *@
+@*         <li>Added ability to clone existing presets for quick editing of default presets</li> *@
+@*         <li>Added ability to favourite presets for ease-of-access</li> *@
+@*         <li>Added ability to edit and delete custom presets</li> *@
+@*     </ul> *@
+@*     <h5 class="text-grey-300 mb-4">Bug Fixes</h5> *@
+@*     <ul class="list-disc ml-6 mb-6"> *@
+@*         <li>Fixed bug where exporting with dependencies would crash if model had no high res textures</li> *@
+@*         <li>Fixed edge-case where bugged MO mods with no images would not load for editing</li> *@
+@*         <li>Fixed edge-case where Flagrum's default window spilled off the monitor on certain resolutions</li> *@
+@*     </ul> *@
+@* </div> *@
 
 @* <div class="bg-grey-900 rounded-md border border-grey-700 p-4 mt-6"> *@
 @*     <h4 class="text-grey-300 mb-4">Flagrum 1.1.6</h4> *@
